<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" 
            android:singleLine="true"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_login"
            android:singleLine="true"
            android:inputType="text" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" 
            android:singleLine="true"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_password"
            android:singleLine="true"
            android:inputType="textPassword" />
        
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/remember_me_checkbox"
            android:text="@string/remember_me"/>
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:text="@string/sign_in" />
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_button"
            android:text="@string/create_account" />
        
    
</LinearLayout>